完成基本功能，加入icon

--- a/MapleStoryLogin/MainForm.resx
+++ b/MapleStoryLogin/MainForm.resx
@@ -57,4 +57,83 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIAAoEQAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAMAAAAHAAAABwAAAAcAAAAHAAAABwAA
+        AAcAAAAHAAAABwAAAAcAAAAHAAAABwAAAAcAAAAHAAAABwAAAAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQAAAAMAAAADAAQEQwICAosCAgKKAgICigIC
+        AooCAgKKAgICigICAooCAgKKAgICigICAooCAgKKAAICigACAooAAgKLAAAATwAAAAgAAAAEAAAAAQAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAbAAAARwAAAEsdLjGhKT1C/yk9
+        Qv8pPUL/KT1C/yk9Qv8pPUL/KT1C/yk9Qv8pPUL/KT1C/yk9Qv8lOkD/HDQ9/xcwNv8OIieyAAAAVQAA
+        AEkAAAAeAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADAAAAFxEdH2oaJinVICgs5Fp7
+        g/GTzNv/k8va/5PL2v+Ty9r/k8va/5PL2v+Ty9r/k8va/5LL2f+Nydj/i8jX/3/A0/9msMr/VKK3/zFm
+        cvMOHyXmDBwg1wkXGXEAAAAZAAAAAwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQAAABAAAABsL0hNzGyY
+        o/mMqbX/qcrY/8Ds/P/A6/v/wOv7/8Dr+//A6/v/wOv7/8Dr+//A6/v/vOr6/6Xi8/+b3/D/l93v/4rU
+        6v9twNz/V6K9/0WEm/84doT5GztC0AAAAHMAAAATAAAAAQAAAAAAAAAAAAAAAAAAAAAAAAAYBw4QbzdR
+        V81znKj7r9/u/8ju/f/N7///ze///83v///N7///ze///83v///N7///ze///83v///K7v7/u+n5/7Xn
+        9/+t5PT/m93v/4jS6f91xuL/ZLrb/1uvyf8+fYz9HUBI0gIND3cAAAAbAAAAAAAAAAAAAAAAAAAAAAAA
+        ACsKDxG5VHqF+qTZ6f/H7fz/ze///83v///N7///ze///83v///N7///ze///83v///N7///ze///83v
+        ///L7v7/y+7+/8Dq+v+q4/P/nN7v/4fS6P9xw+L/Zrvb/1irwv8vZG/7BA4RwwAAADEAAAAAAAAAAAAA
+        AAAAAAAAAAAALQgPEcFUfIf/p97u/8ju/v/N7///ze///83v///N7///ze///83v///N7///ze///83v
+        ///N7///ze///83v///N7///zO///8bs/P+m4vL/md3v/5DX7P9rv97/Wq/G/y9mcf8EDxLLAAAANAAA
+        AAAAAAAAAAAAAAAAAAAAAAAtCRARwVV8hv+a2er/q+Pz/8bt/P/N7///ze///83v///N7///ze///83v
+        ///N7///ze///83v///N7///ze///83v///N7///yO7+/6bi8v+a3u//k9nt/2u/3v9ZrsX/MGVw/wQP
+        EssAAAA0AAAAAAAAAAAAAAAAAAAAAAAAAC0ECAnBMkxR/3GjsP+Y2Oj/s+b3/8Ps/P/N7///ze///83v
+        ///N7///ze///83v///N7///ze///83v///N7///ze///83v///I7v7/puLy/5HY7P+Czuf/ZrnY/0WI
+        nP8bPkT/AQgJywAAADQAAAAAAAAAAAAAAAEAAAARAAkYVAAQJ80ACBL/M05W/4XI2v+Z3e//ruX1/8Ps
+        /P/F7f3/yu7+/83v///N7///ze///87v///O7///ze///83v///I7f3/xOz8/7/r+/+d3e//fcvm/2a8
+        3f9crcv/JUlW/wAEDP8ACh3WAAYUWwAAABMAAAABAAAAEQADDFIAFTfMAD2J8gAjU/8iQ1f/Y6rD/47V
+        6P+b3e//n9zt/5/V5f+44/P/ye7+/8nu/v/J7f3/weHw/8Hh8P/J7f3/x+39/7Tm9/+f2+v/ldHh/3rG
+        4f9rv9//YrfW/02Zrv8dQU//ABQ7/wAlavUADy3RAAMLWwAAABIAAAJxABQ3vgBAkfsAW8b/AE6t/wtA
+        d/8mUGT/a7LK/3vK5v9ssMf/THJ8/4Wyv/+u5fX/ruX1/63j8/9tiZL/aIGL/6vg8f+s4/T/lNft/2al
+        uf9DbHj/WqK+/2G31f9Sobb/IEtY/wovW/8AMIL/ADua/wAqcvwADS7CAAACeAABA7YAJ0j8AHPH/wBQ
+        ov8AU7j/AD+N/wQUIv9Olqz/YbjU/0qQpf8VKzH/UoOO/4TN4f+H0ej/hs/n/0h4if9CcYH/hc3l/4bQ
+        6P90xN3/QX2P/xAmLP9HiZ7/XLPK/0iTof8EFR//ACNl/wA2kP8AM3n/AE+W/wAdPfwAAQPBAAMEugA4
+        TP8Ak8H/AEFg/wA8gf8ANXv/Ag0X/zx8if9Lmqr/O3uI/xMxNv86doL/X7TM/2e72f9ovNv/YLLQ/2Cx
+        z/9ovNv/Z7va/161zf87e4n/Ei81/zl2g/9Kmaj/PoGN/wMOF/8AHVf/ACRn/wAiQv8AaIr/AC09/wAD
+        A8UAAwS6ADpM/wCt3f8Alb//AEJf/wAIEv8AAQL/BAwN/wYQEP8SLDH/QoeU/1Gltf9Wr8D/V6/D/1iw
+        w/9YsMT/WLDE/1iww/9XsMP/Vq/B/1Gmtv9DjJn/FDE2/wcQEf8FDQ7/AAEB/wACC/8AFUP/AEKN/wB2
+        ov8ALz3/AAMDxQADBLoAQ0//AMnr/wC35v8Acq7/AEKG/wBAhP8APoT/AD6D/wVCev8cSlr/IUtS/yFK
+        Uv8hSlL/IUpS/yFKUv8hSlL/IUtS/yFLUv8hS1L/IUtS/x5JVv8FMmL/ACpm/wAoZv8AIl//ACJe/wA9
+        fP8Aa6b/AICn/wAvPf8AAwPFAAMEugBFUf8AyvL/ALr2/wCX9P8Ag/X/AIL2/wCC9v8AfvP/AGXL/wAj
+        T/8AFjT/ABY2/wAWNv8AFjb/ABY2/wAbNv8AJzX/ACQy/wAiMf8AIjD/ACg//wBNo/8AWsf/AFfE/wBK
+        tP8ARq//AFes/wB4q/8Ag6f/AC89/wADA8UAAgOfAC5N5wCK2v0Amfb/AJr+/wCX/v8Al/7/AJj+/wCK
+        9/8Aeuz/AHPf/wBx3P8Acdz/AHDc/wBu2/8AbNv/AIDb/wCp2f8AotH/AJ/N/wCfzf8Am8//AHzZ/wBr
+        3P8AYtb/AFS9/wBJsf8ARKv/AFGn/wBqlv4ALTnpAAIDqQAABDoAGS+HAEJv8QB+0f0AmPz/AJn+/wCa
+        //8Am///AJX9/wCP+v8AkPv/AJD7/wCQ+/8AjPj/AH3x/wB58P8AjfD/ALnv/wC57P8At+r/ALfr/wC1
+        6v8AqOr/AIbk/wBi2P8AVL7/AEmx/wBBqv8AOpH9AC5N9AAZII8AAAQ+AAAAAQAAACoAFSeQAEN24ABv
+        xv8Ajvj/AJn+/wCZ//8Amf//AJr//wCa//8Amv//AJr//wCX/f8Ai/j/AIn2/wCT9v8ArPX/ALjw/wC9
+        7/8Auuz/ALXo/wC15/8Ajdv/AFnJ/wBMtv8ARa7/ADSL/wAcUeUACBuXAAAAMQAAAAIAAAAAAAAABQAG
+        DCsADiCWADl34wByyf0An/X/AK7+/wCw//8Aq///AJ3//wCa//8Amv//AJr//wCY/v8AmP7/AJn+/wCf
+        /f8ArfX/AK/w/wCr6v8AquD/AJzY/wB2yf8ATbf/AEOr/wA2j/4AHlbmAAUXngAABTAAAAAFAAAAAAAA
+        AAAAAAAAAAAABQAAByQADBmaAElo8wCp2/4A2vv/AOX//wDW//8Apv//AJr//wCa//8Amv//AJr//wCa
+        //8Amv//AJr//wCb/f8AjvX/AI3p/wCc3P8Accf/AFO3/wBDrP8AO53+ABxP9gAGEaIAAAYqAAAABgAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAABQAAACcAHSaFAD1P7gCx1v8A3vz/AOv//wDU//8AsP//AJr//wCa
+        //8Amv//AJr//wCa//8Amv//AJj9/wCB8P8AbNr/AGnI/wBavv8ATbb/ADua/wAROfAABRuNAAAAKwAA
+        AAYAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADkACg+eAGeF7gCxy/8A7///AOf//wC4
+        //8Amv//AJr//wCa//8Amv//AJr//wCY/v8AkPn/AIbr/wB61P8AbL//AFa4/wA8lf8AI2HxAAIOowAA
+        AD8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABUAAACxAGlv7ADU
+        4f8A4vr/ALj//wCa//8Amv//AJr//wCa//8Amv//AJf9/wCJ8P8AleP/AKPR/wCTvP8AUJ3/ABxS7wAA
+        ALgAAAAbAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAAA
+        ACgAJymKAFZc7wDC1vwArOv/AJT0/wCZ/f8Amv//AJr//wCZ//8Amfr/AJ3k/wCZyf8Ak7X/AISj/QAq
+        RfAABRqWAAAAKgAAAAYAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAADQAISKNAFtm7ABObv8AZ63/AJT0/wCa/v8Amv7/AJT7/wCL8P8Als7/AG+K/wBD
+        Uv8APUvxABcckgAAADsAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAgAAACUAAAKNAAIFowA0WcsAWpj4AF+f/wBen/8AWJz/AEyR/wBW
+        efkAOETOAAMFpAAAAJIAAAAqAAAAAgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABgAAABgAAAAfAA4bcAARH8wAEiDZABIg2AAR
+        H9gADhzZABAYzgAPE3cAAAAhAAAAGQAAAAcAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEAAAAVAAAALAAA
+        AC8AAAAvAAAALwAAAC8AAAAtAAAAFwAAAAEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAABAAAAAQAAAAEAAAABAAAAAQAAAAEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA==
+</value>
+  </data>
 </root>
